--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jungbeom Lee"
   avatar           : "profile.png"
-  bio              : "Seoul National University"
+  bio              : "PhD candidate, Seoul National University"
   location         : "Seoul, South Korea"
   employer         :
   pubmed           : 
