--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Jungbeom Lee"
 title_separator          : "-"
 name                     : &name "Jungbeom Lee"
 description              : &description "PhD candidate, Department of ECE, Seoul National University (SNU)"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jbeomlee93.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jbeomlee93/jbeomlee93.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
